<resources>
    <string name="app_name">LayoutHW</string>
    <string name="welcome_image_description">Welcome image</string>
    <string name="welcome_back">Welcome back</string>
    <string name="below_welcome_back">sign in to access your account</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">Next</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account</string>
    <string name="full_name">Full Name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong password</string>
    <string name="agree_terms">
        By checking the box you agree to our
        <font color="#6C63FF">Terms</font>
        and  <font color="#6C63FF">Conditions</font>
    </string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
</resources>
