<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/welcome_image"
        android:contentDescription="@string/welcome_image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginStart="74dp"
        android:src="@drawable/welcome_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toTopOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="@id/welcome_image"
        app:layout_constraintEnd_toEndOf="@id/welcome_image"
        android:layout_marginTop="136dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="110dp" />

    <TextView
        android:id="@+id/access_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/below_welcome_back"
        android:textSize="14sp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        app:layout_constraintStart_toStartOf="@id/welcome_image" />

    <!--    <EditText-->
    <!--        android:id="@+id/email_edit_text"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:hint="@string/enter_your_mail"-->
    <!--        android:background="@drawable/box_edittext_background"-->
    <!--        android:backgroundTint="@color/editTextColor"-->
    <!--        android:fontFamily="@font/montserrat_regular"-->
    <!--        android:textSize="17sp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/welcome_image"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginTop="70dp"-->
    <!--        android:layout_marginStart="34dp"-->
    <!--        android:layout_marginEnd="34dp"-->
    <!--        tools:ignore="Autofill, TextFields" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_mail"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="text"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="@id/email_edit_text"
        app:layout_constraintEnd_toEndOf="@id/email_edit_text"
        android:layout_marginTop="28dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:textSize="17sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/password_edit_text"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:hint="@string/password"-->
    <!--        android:background="@drawable/box_edittext_background"-->
    <!--        android:backgroundTint="@color/editTextColor"-->
    <!--        android:fontFamily="@font/montserrat_regular"-->
    <!--        android:textSize="17sp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/email_edit_text"-->
    <!--        app:layout_constraintStart_toStartOf="@id/email_edit_text"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/email_edit_text"-->
    <!--        android:layout_marginTop="28dp"-->
    <!--        tools:ignore="Autofill,TextFields" />-->

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/remember_me"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="@id/password_edit_text"
        android:layout_marginTop="5dp"
        android:layout_marginStart="-3dp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/forget_password"
        android:textColor="@color/buttonBackgroundColor"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/next"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/new_member_text_view"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="@id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greater_than"
        app:layout_constraintTop_toTopOf="@id/nextButton"
        app:layout_constraintBottom_toBottomOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="@id/nextButton"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="109dp"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/new_member_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="30sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/new_member"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_now_text_view"
        app:layout_constraintStart_toStartOf="@id/nextButton"
        app:layout_constraintTop_toBottomOf="@id/nextButton" />

    <TextView
        android:id="@+id/register_now_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register_now"
        android:textColor="@color/buttonBackgroundColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nextButton"
        app:layout_constraintTop_toBottomOf="@id/nextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
